apps/openwebui/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: openwebui
  name: openwebui-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: openwebui
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: openwebui
  name: openwebui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: 30m
spec:
  ingressClassName: nginx-ingress
  rules:
    - host: openwebui.lumpiasty.xyz
      http:
        paths:
          - backend:
              service:
                name: openwebui-web
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - openwebui.lumpiasty.xyz
      secretName: openwebui-ingress
